force-app/main/default/objects/Opportunity/fields/AmountB__c.field-meta.xml
<CustomField>
    <fullName>AmountB__c</fullName>
    <defaultValue>0</defaultValue>
    <label>AmountB</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>