force-app/main/default/objects/Opportunity/fields/Analysis_Entry__c.field-meta.xml
<CustomField>
    <fullName>Analysis_Entry__c</fullName>
    <label>Analysis Entry</label>
    <type>DateTime</type>
</CustomField>