force-app/main/default/objects/Opportunity/fields/Analysis_Exit__c.field-meta.xml
<CustomField>
    <fullName>Analysis_Exit__c</fullName>
    <label>Analysis Exit</label>
    <type>DateTime</type>
</CustomField>