force-app/main/default/objects/Opportunity/fields/Due_Date__c.field-meta.xml
<CustomField>
    <fullName>Due_Date__c</fullName>
    <formula>CreatedDate + CASE(WEEKDAY(DATEVALUE (CreatedDate)), 6, 10, 8)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Due Date</label>
    <type>DateTime</type>
</CustomField>