force-app/main/default/objects/Opportunity/fields/Proposition_Entry__c.field-meta.xml
<CustomField>
    <fullName>Proposition_Entry__c</fullName>
    <label>Proposition Entry</label>
    <type>DateTime</type>
</CustomField>