force-app/main/default/objects/Opportunity/fields/Proposition_Exit__c.field-meta.xml
<CustomField>
    <fullName>Proposition_Exit__c</fullName>
    <label>Proposition Exit</label>
    <type>DateTime</type>
</CustomField>