force-app/main/default/objects/Opportunity/fields/Prospect_Entry__c.field-meta.xml
<CustomField>
    <fullName>Prospect_Entry__c</fullName>
    <label>Prospect Entry</label>
    <type>DateTime</type>
</CustomField>