force-app/main/default/objects/Opportunity/fields/Prospect_Exit__c.field-meta.xml
<CustomField>
    <fullName>Prospect_Exit__c</fullName>
    <label>Prospect Exit</label>
    <type>DateTime</type>
</CustomField>