force-app/main/default/objects/Opportunity/fields/Qualification_Entry__c.field-meta.xml
<CustomField>
    <fullName>Qualification_Entry__c</fullName>
    <label>Qualification Entry</label>
    <type>DateTime</type>
</CustomField>