force-app/main/default/objects/Opportunity/fields/Qualification_Exit__c.field-meta.xml
<CustomField>
    <fullName>Qualification_Exit__c</fullName>
    <label>Qualification Exit</label>
    <type>DateTime</type>
</CustomField>