force-app/main/default/objects/Opportunity/fields/Test_Pick__c.field-meta.xml
<CustomField>
    <fullName>Test_Pick__c</fullName>
    <label>Test Pick</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>prince</fullName>
            </value>
            <value>
                <fullName>kothari</fullName>
            </value>
            <value>
                <fullName>hello</fullName>
            </value>
            <value>
                <fullName>hi</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>