force-app/main/default/objects/Opportunity/fields/TestGIT__c.field-meta.xml
<CustomField>
    <fullName>TestGIT__c</fullName>
    <label>TestGIT</label>
    <length>18</length>
    <type>Text</type>
</CustomField>