force-app/main/default/objects/Opportunity/recordTypes/ABC_Sales_Opp_RT.recordType-meta.xml
<RecordType>
    <fullName>ABC_Sales_Opp_RT</fullName>
    <active>true</active>
    <businessProcess>New Sales Process</businessProcess>
    <label>ABC Sales Opp RT</label>
</RecordType>