force-app/main/default/objects/Opportunity/recordTypes/Default_Stages.recordType-meta.xml
<RecordType>
    <fullName>Default_Stages</fullName>
    <active>true</active>
    <businessProcess>Default Sales Process</businessProcess>
    <label>Default Stages</label>
</RecordType>