force-app/main/default/objects/Opportunity/recordTypes/New_Lead_Conv_RT.recordType-meta.xml
<RecordType>
    <fullName>New_Lead_Conv_RT</fullName>
    <active>true</active>
    <businessProcess>New Sales Process</businessProcess>
    <label>New Lead Conv RT</label>
</RecordType>